--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -23,19 +23,24 @@ jobs:
     name: Clippy Check
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the latest code
-        id: git_checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - name: Define Rust Toolchain
-        id: define_rust_toolchain
-        run: echo "RUST_TOOLCHAIN=$(cat ./rust-toolchain)" >> $GITHUB_ENV
-      - name: Setup Rust Toolchain
-        id: setup_rust_toolchain
-        uses: actions-rust-lang/setup-rust-toolchain@11df97af8e8102fd60b60a77dfbf58d40cd843b8 # v1.10.1
+      # - name: Checkout the latest code
+      #   id: git_checkout
+      #   uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      # - name: Define Rust Toolchain
+      #   id: define_rust_toolchain
+      #   run: echo "RUST_TOOLCHAIN=$(cat ./rust-toolchain)" >> $GITHUB_ENV
+      # - name: Setup Rust Toolchain
+      #   id: setup_rust_toolchain
+      #   uses: actions-rust-lang/setup-rust-toolchain@11df97af8e8102fd60b60a77dfbf58d40cd843b8 # v1.10.1
+      #   with:
+      #     toolchain: ${{ env.RUST_TOOLCHAIN }}
+      #     components: clippy
+      #     cache: false
+      - name: Rust Toolchain
+        id: toolchain
+        uses: wileyj/actions/rust-toolchain@chore/6107
         with:
-          toolchain: ${{ env.RUST_TOOLCHAIN }}
-          components: clippy
-          cache: false
+          components: clippy      
       - name: Clippy
         id: clippy
         run: cargo clippy-stacks
